# antiokh

./: Cargo.toml  README.md
config/: default.toml  test.toml
src/: main.rs  settings.rs  static_asset.rs  static_file.rs
src/pages/: home.rs
templates/: home.html  main.layout.html
