[package]
name = "antiokh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
config = "0.13.1"
env_logger = "0.8"
log = "0.4"
rust-embed = "6.4.0"
askama_actix = "0.13.0"
askama = { version = "0.11.1", default-features = false, features = ["with-actix-web"] }
mime = "0.3.16"

[dev-dependencies]
actix-rt = { version = "2", default-features = false }
actix-test = "=0.1.0-beta.13"
