[package]
name = "antiokh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
anyhow = "1"
askama_actix = "0.13"
askama = { version = "0.11", default-features = false, features = ["with-actix-web"] }
config = "0.13"
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
mime = "0.3"
rust-embed = "6.4"
serde = { version = "1.0", features = ["derive"] }
